static/cmaps80.css
/* ... */
.leftnameplate_avatar {
    position: absolute; 
    top:2px; 
    right: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
}

.leftnameplate_close {
    position: absolute; 
    top:2px; 
    right: 2px; 
    width:196px; 
    height: 196px;
    overflow:hidden; 
    border-radius: 50%;
    opacity: 0; 
}

.leftnameplate_close:hover {
    opacity: 1;
}

.leftnameplate_textbox {
    position: absolute; 
    left: 2px; 
    top:62px; 
    width: 376px; 
    height:136px; 
    padding-left:5px; 
    padding-right: 5px;
    overflow:hidden; 
    border-radius:10px 0px 0px 0px; 
    font-size: 14px;
    line-height:155%;
}

.leftnameplate_number {
    position: absolute; 
    left: 2px; 
    bottom:2px; 
    width: 150px; 
    height:30px; 
    overflow:hidden; 
    padding-left:5px; 
    padding-right: 5px;
    text-align: center; 
    line-height: 30px; 
    border-radius:0px 10px 0px 10px; 
    font-size: 16px; 
    background:#555;
}

.leftnameplate_copy {
    position: absolute; 
    left: 158px; 
    bottom:2px; 
    width: 30px; 
    height:30px; 
    overflow:hidden; 
    padding-left:5px; 
    padding-right: 5px;
    text-align: center; 
    line-height: 30px; 
    border-radius:0px 10px 0px 10px; 
    font-size: 16px; 
    opacity: 0.7;
    cursor: pointer;
}

.leftnameplate_copy:hover {
    opacity: 1.0;
}

.announceplate {
    position: relative;
    width: 550px; 
    height: 140px; 
    border-radius: 10px; 
    background-color: #707070;
    opacity: 0.9;
    margin: 10px 10px 10px 20px;
}

.announceplate:hover {
    opacity:1.0;
}

.announceavatar {
    position:absolute; 
    top:30px;
    left:10px;
    width:100px;
    height: 100px;
    border-radius: 10px;
    background-size: cover;
}

.announcetextbox {
    position:absolute; 
    top:30px;
    left:120px;
    width:420px;
    height: 100px;
    border-radius: 10px;
    display: flex;
    align-items: center;
}

.announcetext {
    margin: 10px; 
    width:400px;
}

.announcedate {
    position:absolute; 
    top:0px;
    right:80px;
    width:200px;
    height:30px;
    text-align:center;
    line-height:30px;
    border-radius:0px 0px 0px 10px;
    background-color: #393a3c;
}

.announcetype {
    position:absolute; 
    top:0px;
    right:0px;
    width:80px;
    height:30px;
    text-align:center;
    line-height:30px;
    border-radius:0px 10px 0px 0px;
}

.notifybadge {
    position: relative; 
    width: 140px;
    height: 40px;
    display: inline;
    float: left;
    line-height: 40px;
    background-color:#FF7F00;
    text-align: center;
    border-radius: 20px;
    margin-right: 2px;
    opacity: 0.7;
    pointer-events: auto;
}

.notifybadge:hover {
    opacity: 1.0;
}

.loginicon {
    opacity: 0.4;
}

.loginicon:hover {
    opacity: 1.0;
}

#avatarbutton {
    position:fixed; 
    left: 20px; 
    bottom: 20px; 
    width:80px; 
    height:80px;
    border-radius:50%;
    cursor:pointer;
    background: transparent;
    overflow:hidden;
    z-index:1;
}

.avatarbutton_username {
    position:fixed; 
    left:60px; 
    bottom: 20px; 
    width:auto; 
    height:80px;
    line-height: 80px; 
    vertical-align: middle;
    white-space: nowrap;
    cursor:pointer;
    background-color:#333; 
    font-size:1.3em;z-index:0;
    padding-left:70px;
    padding-right:24px;
    border-radius:0px 40px 40px 0px;
}

.avatarbutton_username:hover {
    background-color:#555;
}

canvas {
    width: 100% !important;
    max-width: 1600px;
    height: auto !important;
}

#container{
  position:absolute;
  left:0px;
  top:0px;
  right:0px;
  bottom:0px;
  font-family:Arial, sans-serif;
  color:#fff;
  background: none;
}
.page_content{
  width:1600px;
  height:1200px;
  -ms-transform-origin: top left;
  -webkit-transform-origin: top left;
  transform-origin: top left;
  -webkit-transition: left 500ms ease-in-out, top 500ms ease-in-out !important;
  transition: left 300ms ease-in-out, top 300ms ease-in-out !important;
  position: absolute;
  z-index: 0;
}

a {color: white;text-decoration: none;}

tr:hover {
  background-color: #555;
}

td a{width:100%;display:block;}

table { border-collapse:collapse }

body {
    font-family: Roboto, Arial, Helvetica;
    background-color:#000; 
    background-image: url("images/background.png"); 
    color:#ffffff;
}

.mapflag {
    position: absolute;
	opacity: 0.7; 
	overflow: hidden;
	border-radius: 50%;
	width: 100px;
	height: 100px;
    background-size: 100% 100%;
    cursor: zoom-in;
    /*transition: transform .2s;  Animation */
}

.mapflag_results {
    position: absolute;
	opacity: 1.0; 
	overflow: hidden;
	border-radius: 50%;
	width: 40px;
	height: 40px;
	left: 30px;
	bottom: 0px;
	background-color: rgba(255, 127, 0, 1);	
	font-size:1.5em;
	line-height: 40px;
    visibility: hidden;
    text-align: center;
}

.mapflag:hover{
    opacity: 1.0;
    transform: scale(1.5); /* (150% zoom */
    z-index: 100;
}

.mapflag_address {
    position: absolute;
	opacity: 0.9; 
	overflow: hidden;
	border-radius: 3px;
	width:300px;
	background:#333333;
    text-align: left; padding: 5px;  
    z-index:99; 
    display:none;
}

.headeritem {
    position: relative;
    height: 65px;
    width: 200px;
    margin-top:2px; 
    margin-left: 4px;
    margin-right:4px;
    float:left; 
    display:inline;
    border-radius:5px;
}

.headeritem_text {
    line-height:65px;
    float:left; 
    display:inline;
    margin-left:5px;
    margin-right:5px;
}

.headeritem_floors {
    width:45px; 
    height:45px; 
    margin-top:10px;
    margin-left:5px; 
    border-radius:5px;
    background-color:#0979D8;
    line-height:45px;
    text-align:center;
    color: #FFFFFF;
    font-size:24px;
    font-weight:bold;
    float:left; 
    display:inline;
    opacity: 0.6;
}

.headeritem_floors:hover {
    opacity: 1.0;
}
/* ... */

